src/epub/css/local.css
@charset "utf-8";
@namespace epub "http://www.idpf.org/2007/ops";

/* begin non-ToC section header */
#chapter-1 header{
	font-size: 1.17em;
	font-variant: small-caps;
	font-weight: 700;
	margin-top: 2em;
}
/* end non-ToC section header */

/* begin verse */
[epub|type~="z3998:verse"] p{
	text-align: initial;
	text-indent: 0;
}

[epub|type~="z3998:verse"] p > span{
	display: block;
	padding-left: 1em;
	text-indent: -1em;
}

[epub|type~="z3998:verse"] p > span + br{
	display: none;
}

p span.i1{
	padding-left: 2em;
	text-indent: -1em;
}

p span.i2{
	padding-left: 3em;
	text-indent: -1em;
}

/* left margin and outdent on last line of this verse */
#chapter-11 blockquote:nth-of-type(9) p{
	text-align: initial;
	text-indent: 0;
}

#chapter-11 blockquote:nth-of-type(9) span:last-child{
	text-align: initial;
	text-indent: -2.25em;
}
/* end verse */

/* begin names written on the board */
#chapter-4 blockquote strong{
	font-style: italic;
	font-variant: normal;
	text-transform: uppercase;
}

#chapter-4 blockquote{
	text-align: center;
}
/* end names written on the board */

/* begin poster */
#chapter-7 blockquote{
	text-align: center;
	text-indent: 0;
}

#chapter-7 blockquote p{
	text-indent: 0;
}

#chapter-7 blockquote p:nth-of-type(2){
	margin-top: 1em;
}

#chapter-7 blockquote p:nth-of-type(4){
	margin-top: 1em;
}

#chapter-7 blockquote strong{
	font-variant: normal;
	text-transform: uppercase;
}

p span.floatl{
	display: inline-block;
	float: left;
	margin-left: 3em;
}

p span.floatr{
	display: inline-block;
	float: right;
	margin-right: 3em;
}

#chapter-7 blockquote p:nth-of-type(6){
	margin-bottom: 1em;
}

#chapter-7 blockquote p:nth-of-type(8){
	margin-top: 2.5em;
}

#chapter-7 blockquote p:nth-of-type(11){
	margin-top: 1em;
}
/* end poster */

/* begin bulletin board ad */
#chapter-9 blockquote:nth-of-type(5){
	text-align: center;
	text-indent: 0;
}

#chapter-9 blockquote p{
	text-indent: 0;
}

#chapter-9 blockquote p + p{
	margin-top: 1em;
}

#chapter-9 blockquote strong{
	font-variant: normal;
	text-transform: uppercase;
}
/* end bulletin board ad */

/* begin banners/proclamations/signs */
#chapter-11 blockquote{
	text-align: center;
	text-indent: 0;
}

#chapter-11 blockquote p{
	text-indent: 0;
}

#chapter-11 blockquote strong{
	font-variant: normal;
	text-transform: uppercase;
}

#chapter-11 blockquote p:nth-of-type(2){
	margin-top: 1em;
}

#chapter-11 blockquote p:nth-of-type(4){
	margin-top: 1em;
}

/* extra big and bold word in this banner */
#chapter-11 blockquote:nth-of-type(15) span{
	font-size: 1.17em;
	font-weight: 700;
	text-transform: uppercase;
}
/* end banners */

/* begin escalating emphasis */
#chapter-11 strong:nth-of-type(2){
	font-variant: normal;
	text-transform: uppercase;
}

#chapter-11 strong:nth-of-type(3){
	font-style: italic;
	font-variant: normal;
	text-transform: uppercase;
}
/* end escalating emphasis */

/* begin letter */
[epub|type~="z3998:signature"]{
	font-variant: small-caps;
}

footer{
	margin-top: 1em;
	text-align: right;
}
/* end letter */

/* begin telegram */
#chapter-11 blockquote:nth-of-type(16) p:first-child{
	text-align: initial;
	text-indent: 0;
}

#chapter-11 blockquote:nth-of-type(16) p:last-child{
	text-align: right;
	text-indent: 0;
}

.telegram{
	font-variant: all-small-caps;
}
/* end telegram */

